--- a/src/main/webui/src/index.scss
+++ b/src/main/webui/src/index.scss
@@ -1,39 +1,44 @@
 // html,
 // body,
 :root {
-    --footer-height: 56px;
+  --footer-height: 56px;
 }
 
 * {
-    margin: 0;
+  margin: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: inherit;
 }
 
 #root {
-    // font-family: Roboto, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    height: 100dvh;
-    width: 100dvw;
+  // font-family: Roboto, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  height: 100dvh;
+  width: 100dvw;
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    // justify-content: flex-start; /* align items in Main Axis */
-    // align-items: stretch;
-    // align-content: stretch;
-    // margin: 0;
-    // display: flex;
-    // justify-content: center;
-    // place-items: center;
-    // min-width: 100vw;
-    // min-height: 100vh;
-    // line-height: 1.5;
-    // font-weight: 400;
+  // justify-content: flex-start; /* align items in Main Axis */
+  // align-items: stretch;
+  // align-content: stretch;
+  // margin: 0;
+  // display: flex;
+  // justify-content: center;
+  // place-items: center;
+  // min-width: 100vw;
+  // min-height: 100vh;
+  // line-height: 1.5;
+  // font-weight: 400;
 
-    // color-scheme: light dark;
-    // color: rgba(255, 255, 255, 0.87);
-    // background-color: #242424;
+  // color-scheme: light dark;
+  // color: rgba(255, 255, 255, 0.87);
+  // background-color: #242424;
 
-    // font-synthesis: none;
-    // text-rendering: optimizeLegibility;
-    // -webkit-font-smoothing: antialiased;
-    // -moz-osx-font-smoothing: grayscale;
+  // font-synthesis: none;
+  // text-rendering: optimizeLegibility;
+  // -webkit-font-smoothing: antialiased;
+  // -moz-osx-font-smoothing: grayscale;
 }
